# django_onlinestore

./: README.md  category_data.json  manage.py  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: filler.py
catalog/migrations/: 0001_initial.py  0002_product_date_of_creation_product_last_modified_date.py  0003_alter_product_image.py  0004_version.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: inc_main.html
catalog/templatetags/: tags.py
djangoonlinestore/: asgi.py  settings.py  urls.py  wsgi.py
