[tool.poetry]
name = "djangoonlinestore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
ipython = "^8.14.0"
pillow = "^10.0.0"
pytils = "^0.4.1"
slugify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
